# eh2telegraph

./: Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
bot/: Cargo.toml
bot/src/: handler.rs  main.rs  util.rs  version.rs
eh2telegraph/: Cargo.toml
eh2telegraph/src/: http_client.rs  http_proxy.rs  lib.rs
eh2telegraph/src/collector/: e_hentai.rs  exhentai.rs  mod.rs  nhentai.rs
eh2telegraph/src/searcher/: saucenao.rs
eh2telegraph/src/storage/: cloudflare_kv.rs  mod.rs
eh2telegraph/src/telegraph/: mod.rs
